History delivery works now

--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -66,17 +66,17 @@ body {
 }
 
 
-#settings-wrapper {
+#logout-wrapper {
 	display: table-cell;
 	position: relative;
 	float: right;
-	padding: 4px;
+	padding: 6px 8px;
 	border-left: 1px solid @blue;
 
-	#settingsIcon {
+	#logoutIcon {
 		float: right;
-		width: 18px;
-		height: 18px;
+		width: 14px;
+		height: 14px;
 	}
 
 	#settingsMenu {
