--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -168,6 +168,8 @@ body {
 		width: 100%;
 		height: 18px;
 		border: 1px solid #aaa;
+		color: #545454; // Gets changed after click
+		padding-left: 4px;
 	}
 }
 
@@ -324,6 +326,16 @@ body {
 		background-image: -webkit-linear-gradient(bottom, #ccc 10%, #eee 90%);
 		border-bottom: 1px solid #aaa;
 	}
+	
+	li.noResult {
+		color: #999;
+		background-color: #fff;
+		text-align: center;
+		border: none;
+		text-shadow: none;
+		
+		cursor: pointer;
+	}
 
 }
 
@@ -464,9 +476,61 @@ body {
 		width: 100%;
 		height: 18px;
 		border: 1px solid #aaa;
+		padding-left: 4px;
 	}
 }
 
+
+
+/***** Login *****/
+
+#loginWrapper {
+	margin: auto;
+	margin-top: 100px;
+	height: 220px;
+	width: 220px;
+	background: @blue;
+	border: solid 2px #fff;
+	text-align: left;
+	
+	color: white;
+	border-radius: 6px;
+	
+	box-shadow: 0px 0px 4px #111;
+	text-shadow: 1px 1px 0px @blue-dark;
+	
+	h1 {
+		font-size: 18px;
+		font-weight: bolder;
+		font-family: Verdana, Geneva, sans-serif;
+		display: inline;
+		color: #fff;
+		text-shadow: 1px 1px 0px @blue-dark;
+		margin: 4px;
+		line-height: 26px;
+	}
+	
+	#login {
+		padding: 16px 10px;
+	}
+	
+	input {
+		margin: 10px 0px;
+	}
+
+	input[type=text],input[type=password] {
+		width: 100%;
+		border: 1px solid #333;
+		border-radius: 4px;
+		padding: 4px;
+		font-size: 13px;
+	}
+
+	#login_form #submitButton {
+		//margin-top: 16px;
+	}
+	
+}
 
 
 
